# insight

./: .gitignore  Dockerfile.dev  docker-compose.yml  main.py  pyproject.toml  schemas.py  wait-for-db.sh
alembic/: env.py
alembic/versions/: 0d818d830b0a_create_users_and_stores_tables.py  1ef51c8aa34e_make_otp_timestamps_timezone_aware.py  ec68e1764c58_update_otp_table.py
middleware/: send_otp.py
postgress_client/: connection.py  queries.py  tables.py
routes/: auth.py  otp.py  shopify.py  shopify_callback.py  shopify_connect.py
services/: email_service.py
terraform/: cloudsql.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
utils/: base.py  domain_error.py  error_handlers.py  jwt.py  logger.py  otp.py  shopify_state.py  user.py
